Edition de la page web des commandes git => Remplissage

--- a/commandes_git.html
+++ b/commandes_git.html
@@ -2,19 +2,20 @@
 	<html>
 		<title>Les commandes GIT</title>
 	<body>
+		<h1>Liste des commande de GIT</h1>
 		<ul>
-			<li></li>
-			<li></li>
-			<li></li>
-			<li></li>
-			<li></li>
-			<li></li>
-			<li></li>
-			<li></li>
-			<li></li>
-			<li></li>
-			<li></li>
-			<li></li>
+			<li>git init => Initialiser le répertoire courant comme repository git</li>
+			<li>git status => Status actuel des commandes</li>
+			<li>touch nom_du_fichier => Nouveau fichier</li>
+			<li>git add nom_du_fichier => Ajouter à l'index de git</li>
+			<li>git commit -m <"actions réalisée"> => Validation du fichier</li>
+			<li>git commit -am <"actions réalisée">  => Ajout et Validation en une seule commande ( uniquement après premier ajout à l'index)</li>
+			<li>git log => Affichage de toutes le modifications triées par date (du plus récent au plus ancien)</li>
+			<li>git checkout <"code sha1"> => Se positionner sur un commit donné</li>
+			<li>git checkout master => Revenir à la dernière mofication du projet</li>
+			<li>git clone <url> => Récupérer TOUT le repository</li>
+			<li>git push <remote(« origin » par defaut)> master => Envoyer son code</li>
+			<li>git pull <remote(« origin » par defaut)> master => Récupérer uniquement les modifications</li>
 		</ul>
 	</body>
 </html>
