Implémentation de la feuille de design dans la page web

--- a/commandes_git.html
+++ b/commandes_git.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
-	<html>
+	<html>	
+		<head>
+		<LINK rel=stylesheet type="text/css" href="design.css">
 		<title>Les commandes GIT</title>
+		</head>
 	<body>
 		<h1>Liste des commande de GIT</h1>
 		<ul>
