Correction d'un bug au niveau de l'affichage. Amalgamme du naigateur entre <mon texte à afficher> et <balise html>

--- a/commandes_git.html
+++ b/commandes_git.html
@@ -16,9 +16,9 @@
 			<li>git log => Affichage de toutes le modifications triées par date (du plus récent au plus ancien)</li>
 			<li>git checkout <"code sha1"> => Se positionner sur un commit donné</li>
 			<li>git checkout master => Revenir à la dernière mofication du projet</li>
-			<li>git clone <url> => Récupérer TOUT le repository</li>
-			<li>git push <remote(« origin » par defaut)> master => Envoyer son code</li>
-			<li>git pull <remote(« origin » par defaut)> master => Récupérer uniquement les modifications</li>
+			<li>git clone <"url"> => Récupérer TOUT le repository</li>
+			<li>git push <"remote(« origin » par defaut)"> master => Envoyer son code</li>
+			<li>git pull <"remote(« origin » par defaut)"> master => Récupérer uniquement les modifications</li>
 		</ul>
 	</body>
 </html>
