Ajout de la commande d'ajout d'un remote dans la page web et dans le fichier .odt

--- a/commandes_git.html
+++ b/commandes_git.html
@@ -19,6 +19,7 @@
 			<li>git clone <"url"> => Récupérer TOUT le repository</li>
 			<li>git push <"remote(« origin » par defaut)"> master => Envoyer son code</li>
 			<li>git pull <"remote(« origin » par defaut)"> master => Récupérer uniquement les modifications</li>
+			<li>git remote add origin https://github.com/<"pseudo">/<"projet"> => Ajouter un remote</li>
 		</ul>
 	</body>
 </html>
